src/parser/snapshots/expr/logical/logical_and_is_left_associative.snap
---
source: src/parser/parser.rs
description: logical expressions with correct associativity
expression: actual.unwrap()
info: 1 && 2 && 3
---
location:
  line: 1
  column: 1
kind:
  binary:
    - and
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - and
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 6
            kind:
              int_constant:
                - "2"
                - decimal
    - location:
        line: 1
        column: 11
      kind:
        int_constant:
          - "3"
          - decimal
